# jellyfish

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md
examples/: index.html
index/: 404.html  index.html
public/: 202.html  404 copy.html  404.html  503.html  index copy.html  index.html  script.js  site.webmanifest  style.css
src/: config.rs  handler.rs  main.rs  response.rs  server.rs  shutdown.rs
