[package]
name = "jelly-fish"
version = "1.0.0"
edition = "2024"
description = "A lightweight static resource server built with axum."
license = "MIT"
repository = "https://github.com/canmi21/lazy-mmdb"
readme = "README.md"
keywords = ["network", "server", "web", "static", "axum"]
categories = ["network-programming", "web-programming", "development-tools"]

[[bin]]
name = "jellyfish"
path = "src/main.rs"

[dependencies]
dirs = "6"
dotenvy = "0.15"
fancy-log = "0.1"
lazy-motd = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }