[package]
name = "jelly-fish"
version = "1.0.8"
edition = "2024"
description = "A lightweight static resource server built with axum."
license = "MIT"
repository = "https://github.com/canmi21/jellyfish"
readme = "README.md"
keywords = ["network", "server", "web", "static", "axum"]
categories = ["network-programming", "web-programming", "development-tools"]

[[bin]]
name = "jellyfish"
path = "src/main.rs"

[dependencies]
dotenvy = "0.15"
fancy-log = "0.1"
lazy-motd = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
chrono = "0.4"
serde = "1"
serde_json = "1"
path-clean = "1"
shellexpand = "3"
anyhow = "1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
tower = { version = "0.5", features = ["full"] }
percent-encoding = "2"
mime_guess = "2"